<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_textview">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">Wolox</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="page_1_title">Username: %1$s</string>
    <string name="page_1_toolbar_title">Random number example</string>
    <string name="page_2_title">Page 2</string>
    <string name="page_2_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_login">Login</string>

    <!-- Login -->
    <string name="ingrese_mail">Mail</string>
    <string name="ingrese_contraseña">Contraseña</string>
    <string name="boton_login">LOG IN</string>
    <string name="boton_signup">SIGN UP</string>
    <string name="footer_tyc">By joing you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="email_required">Email is Required</string>
    <string name="password_required">Password is Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="wrong_email_passowrd">Wrong Email or Password</string>
    <string name="no_network_connection">Network Error</string>
    <string name="unsuccessful_response">Unsuccessful Response</string>

    <!-- Home -->
    <string name="home_title">Home</string>
    <string name="nothing_new_to_show">Nothing New</string>
    <string name="example_news_time">15m</string>
    <string name="fail_loading_older_news">Fail Loading Older News</string>
    <string name="fail_loading_recent_news">Fail Loading Recent News</string>

    <!-- News Creation -->
    <string name="news_creation_title">News Creation</string>
    <string name="news_max_lines_title">1</string>
    <string name="news_max_lines_preview">2</string>

    <string name="individual_new_image">This is the place for the individual new image.</string>
    <string name="fail_refreshing_individual_new">Refreshing Error</string>

    <string name="diet_subtitle">¿Seguís algunas de estas dietas?</string>
    <string name="allergic_subtitle">¿Sos alérgico o intolerante a algún alimento?</string>

</resources>