<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".example.ui.login.LoginFragment" >

    <ImageView
        android:id="@+id/logo_wolox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_largest_extra"
        android:src="@drawable/wolox_logo_large" />

    <EditText
        android:id="@+id/text_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/spacing_large"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/text_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/spacing_medium"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/boton_login" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/boton_signup" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_none"
        android:layout_margin="@dimen/spacing_medium_more"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="@string/footer_tyc"
        android:textSize="@dimen/font_medium_extra" />
</LinearLayout>